[package]
name = "rsw"
version = "0.5.0"
description = "wasm-pack based build tool"
edition = "2021"
authors = ["lencx <cxin1314@gmail.com>"]
homepage = "https://github.com/lencx/rsw-rs"
repository = "https://github.com/lencx/rsw-rs"
keywords = ["rsw", "wasm-pack"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.14"
notify = "4.0.17"
regex = "1.5.4"
serde = "1.0.133"
serde_derive = "1.0.133"
toml = "0.5.8"
